--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,5 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,500;0,800;1,400;1,700&display=swap');
